# src/routers/UsuarioRouters.js
@@ -1,9 +1,12 @@
 const express = require("express");
 const router = express.Router();
-const UsuarioController = require("../controllers/UsuarioController")
+const UsuarioController = require("../controllers/UsuarioController");
+const UserAuth = require("../middlewares/UserAuth");
 
-router.get("/", UsuarioController.getUsuarios)
-router.post("/", UsuarioController.postUsuario)
-router.put("/", UsuarioController.putUsuario)
+router.get("/", UserAuth.VerifyToken, UsuarioController.getUsuarios);
+router.get("/:id", UsuarioController.getUsuarioPorID);
+router.post("/", UsuarioController.postUsuario);
+router.post("/login", UsuarioController.postLogin);
+router.put("/", UsuarioController.putUsuario);
 
 module.exports = router;
